--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClCompile Include="BacktesterTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TickMsgTest.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="AssetTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -34,6 +31,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="JsonTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MsgTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformerTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
