--- a/Backtester/Backtester.vcxproj.filters
+++ b/Backtester/Backtester.vcxproj.filters
@@ -23,10 +23,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Backtester.cpp">
+    <ClCompile Include="FileFetcher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="FileFetcher.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
