implemented FileFetcher with a test

--- a/Backtester/Backtester.vcxproj
+++ b/Backtester/Backtester.vcxproj
@@ -177,6 +177,10 @@
     <None Include="endpoints.json" />
     <None Include="parameter.json" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="TickData\2lines.txt" />
+    <Text Include="TickData\5lines.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
