--- a/Backtester/Backtester.vcxproj
+++ b/Backtester/Backtester.vcxproj
@@ -151,13 +151,14 @@
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <AdditionalIncludeDirectories>$(SolutionDir)References\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SolutionDir)References\libzmq-mt-s-4_3_2.lib;Ws2_32.lib;Iphlpapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -174,11 +175,10 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="endpoints.json" />
     <None Include="analyzer.json" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="Data\TickData.txt" />
+    <Text Include="data\TickData.txt" />
     <Text Include="TickData\2lines.txt" />
     <Text Include="TickData\5lines.txt" />
   </ItemGroup>
