--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -158,6 +158,7 @@
       <UseFullPaths>true</UseFullPaths>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -171,7 +172,6 @@
     <ClCompile Include="AssetTest.cpp" />
     <ClCompile Include="BacktesterTest.cpp" />
     <ClCompile Include="JsonTest.cpp" />
-    <ClCompile Include="StrategyTest.cpp" />
     <ClCompile Include="MsgTest.cpp" />
     <ClCompile Include="TicksTest.cpp" />
     <ClCompile Include="TraderTest.cpp" />
